# notes-api

./: .gitignore  Cargo.toml  Dockerfile.notes-server  Makefile  README.md  docker-compose.yml
initdb/: 00_from_database_url.sh
notes_main/: Cargo.toml  docker-compose.yml
notes_main/migrations/: 20250918111144_create_users_table.sql
notes_main/src/: main.rs
notes_server/: Cargo.toml
notes_server/migrations/: 20251003163320_create_notes_table.sql
notes_server/src/: handlers.rs  lib.rs  main.rs  routes.rs  schemas.rs  state.rs
notes_server/src/auth/: jwt.rs  middleware.rs
notes_server/src/handlers/: auth.rs  note.rs
notes_server/src/repositories/: user_repository.rs
notes_server/src/routes/: auth_routes.rs  health_routes.rs  note_routes.rs  user_routes.rs
notes_server/src/schemas/: auth_schemas.rs  note_schemas.rs  user_schemas.rs
services/: Cargo.toml
services/src/: lib.rs  models.rs  repositories.rs  services.rs
services/src/models/: note.rs
services/src/repositories/: note_repository.rs  traits.rs  user_repository.rs
services/src/services/: auth_service.rs  note_service.rs  traits.rs  user_service.rs
