[package]
name = "notes_main"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
rand = "0.9.2"
tower-http = { version = "0.6.6", features = ["catch-panic"] }
