[package]
name = "notes_main"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
# Web
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Validation
validator = { version = "0.20.0", features = ["derive"] }
