[package]
name = "services"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Async
async-trait = "0.1"

# Authorization
bcrypt = "0.15"
jsonwebtoken = "9.0"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
